1. Добавлены тесты 2. Сделан небольшой рефакторинг кода