@@ -1,6 +1,7 @@
 package ru.practicum.moviehub.http;
 
 import com.google.gson.Gson;
+import com.google.gson.JsonSyntaxException;
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpServer;
 import ru.practicum.moviehub.api.ErrorResponse;
@@ -13,38 +14,62 @@ import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
 import java.time.Year;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class MoviesHandler extends BaseHttpHandler{
     @Override
     public void handle(HttpExchange ex) throws IOException {
         String method = ex.getRequestMethod();
+        String queryString = ex.getRequestURI().getQuery();
+        setResponseHeaders(ex);
+
         switch(method){
             case "GET" -> {
-                setResponseHeaders(ex);
-                getHeadersAndBodyOfMovies(ex);
+                if (queryString == null) getHeadersAndBodyOfMovies(ex);
+                else if (queryString.startsWith("year=")) {
+                    String yearString = queryString.split("=")[1];
+                    int yearOfMovie;
+                    try {
+                        yearOfMovie = Integer.parseInt(yearString);
+                        getHeadersAndBodyOfMoviesWithYearFilter(ex, yearOfMovie);
+                    } catch (NumberFormatException e) {
+                        String response = gson.toJson(
+                                new ErrorResponse("400 Bad Request",
+                                        (ArrayList<String>) Arrays.asList("Некорректно указан год")));
+                        sendHeadersAndResponse(response, ex, 400);
+                    }
+                }
             }
             case "POST" -> {
-                setResponseHeaders(ex);
                 postHeadersAndBodyOfMovies(ex);
             }
+            default -> {
+                String response = gson.toJson(
+                    new ErrorResponse("405 Bad Method",
+                            (ArrayList<String>) Arrays.asList("Данный метод не обрабатывается сервером")));
+                sendHeadersAndResponse(response, ex, 405);
+            }
         }
-    }
-
-    public void setResponseHeaders(HttpExchange ex) {
-        ex.getResponseHeaders().set("Content-Type", "application/json; charset=UTF-8");
     }
 
     public void getHeadersAndBodyOfMovies(HttpExchange ex) throws IOException {
         String response = storeToJSONWithoutID();
-        byte[] responseBytes = response.getBytes(StandardCharsets.UTF_8);
-        ex.sendResponseHeaders(200, responseBytes.length);
-        try (OutputStream os = ex.getResponseBody()) {
-            os.write(responseBytes);
-        }
+        sendHeadersAndResponse(response, ex, 200);
+    }
+
+    public void getHeadersAndBodyOfMoviesWithYearFilter(HttpExchange ex, int year) throws IOException {
+        String response = storeToJSONWithoutIDWithYearFilter(year);
+        sendHeadersAndResponse(response, ex, 200);
     }
 
     public String storeToJSONWithoutID() {
         return gson.toJson(MoviesStore.getMoviesMap().values());
+    }
+
+    public String storeToJSONWithoutIDWithYearFilter(int year) {
+        return gson.toJson(MoviesStore.getMoviesMap().values().stream()
+                .filter(movie -> movie.getYear() == year)
+                .collect(Collectors.toSet()));
     }
 
     public String storeToJSONWithID() {
@@ -52,42 +77,65 @@ public class MoviesHandler extends BaseHttpHandler{
     }
 
     public void postHeadersAndBodyOfMovies(HttpExchange ex) throws IOException {
-        Movie movieThatNeedPublic = storeFromJSON(ex);
+        List<String> contentTypeList = ex.getRequestHeaders().get("Content-Type");
+        if (contentTypeList == null || contentTypeList.isEmpty() ||
+                !contentTypeList.get(0).equals("application/json; charset=UTF-8")) {
+            String response = gson.toJson(
+                    new ErrorResponse("Неподдерживаемый тип носителя",
+                            new ArrayList<>(List.of("заголовок Content-Type должен содержать тип JSON"))));
+            sendHeadersAndResponse(response, ex, 415);
+            return;
+        }
+
+        String contentLength = ex.getRequestHeaders().getFirst("Content-Length");
+        if (contentLength == null) {
+        } else if (Integer.parseInt(contentLength) == 0) {
+            String response = gson.toJson(new ErrorResponse("400 Bad Request",
+                    new ArrayList<>(List.of("Пустое тело запроса"))));
+            sendHeadersAndResponse(response, ex, 400);
+            return;
+        }
+
+        Movie movieThatNeedPublic = null;
+        try (InputStreamReader isr = new InputStreamReader(ex.getRequestBody(), StandardCharsets.UTF_8)) {
+            movieThatNeedPublic = storeFromJSON(isr);
+        } catch (JsonSyntaxException | IOException e) {
+            String response = gson.toJson(
+                    new ErrorResponse("Ошибка валидации",
+                            new ArrayList<>(List.of("некорректно переданный JSON файл"))));
+            sendHeadersAndResponse(response, ex, 400);
+            return;
+        }
+
+        if (movieThatNeedPublic == null) {
+            String response = gson.toJson(
+                    new ErrorResponse("400 Bad Request",
+                            new ArrayList<>(List.of("Некорректный JSON: объект не создан"))));
+            sendHeadersAndResponse(response, ex, 400);
+            return;
+        }
+
         if (movieThatNeedPublic.getYear() < 1888 || movieThatNeedPublic.getYear() >= Year.now().getValue() + 1) {
             String response = gson.toJson(
                     new ErrorResponse("Ошибка валидации",
-                            (ArrayList<String>) Arrays.asList("несуществующий год существования фильма")));
+                            new ArrayList<>(List.of("несуществующий год существования фильма"))));
             sendHeadersAndResponse(response, ex, 422);
+            return;
         } else if (movieThatNeedPublic.getTitle().length() > 100 || movieThatNeedPublic.getTitle().isBlank()) {
             String response = gson.toJson(
                     new ErrorResponse("Ошибка валидации",
-                            (ArrayList<String>) Arrays.asList("название не должно быть пустым", "название не должно быть более 100 символов")));
+                            new ArrayList<>(List.of("название не должно быть пустым", "название не должно быть более 100 символов"))));
             sendHeadersAndResponse(response, ex, 422);
-        } else if (!ex.getRequestHeaders().get("Content-Type").equals("application/json; charset=UTF-8")) {
-            String response = gson.toJson(
-                    new ErrorResponse("Неподдерживаемый тип носителя",
-                            (ArrayList<String>) Arrays.asList("заголовок Content-Type должен содержать тип JSON")));
-            sendHeadersAndResponse(response, ex, 415);
-        } else {
-            addMoviesInStore(movieThatNeedPublic);
-            String response = storeToJSONWithID();
-            sendHeadersAndResponse(response, ex, 201);
+            return;
         }
+
+        addMoviesInStore(movieThatNeedPublic);
+        String response = storeToJSONWithID();
+        sendHeadersAndResponse(response, ex, 201);
     }
 
-    public void sendHeadersAndResponse(String response, HttpExchange ex, int returnCode) throws IOException {
-        byte[] responseBytes = response.getBytes(StandardCharsets.UTF_8);
-        ex.sendResponseHeaders(returnCode, responseBytes.length);
-        try (OutputStream os = ex.getResponseBody()) {
-            os.write(responseBytes);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    public Movie storeFromJSON(HttpExchange ex) {
-        InputStreamReader isr = new InputStreamReader(ex.getRequestBody(), StandardCharsets.UTF_8);
-        return gson.fromJson(isr, new MoviesTypeToken());
+    public Movie storeFromJSON(InputStreamReader isr) {
+        return gson.fromJson(isr, Movie.class);
     }
 
     public void addMoviesInStore(Movie movie){
